# sprites2

./: AGEAlignerAdapter.cpp  AGEAlignerAdapter.h  AGERealignWholeReadCaller.cpp  AGERealignWholeReadCaller.h  AlignmentFragment.cpp  AlignmentFragment.h  CMakeLists.txt  CallParams.h  CallResult.cpp  CallResult.h  ChromoFragment.h  ChromosomeRegion.cpp  ChromosomeRegion.h  ClipReader.cpp  Deletion.cpp  DoubleFragsAlnResult.cpp  DoubleFragsAlnResult.h  FaidxWrapper.cpp  FaidxWrapper.h  FiveEndForwardSCRead.cpp  FiveEndForwardSCRead.h  FiveEndReverseSCRead.cpp  FiveEndReverseSCRead.h  GenomePosition.cpp  GenomePosition.h  HTSlibSequenceFetcher.cpp  HTSlibSequenceFetcher.h  Interval.cpp  Interval.h  ScoreParam.h  alignmentresult.h  clip.cpp  clip.h  main.cpp  realignmentcaller.h  sequencealigner.h  sequencefetcher.h  softclippedread.cpp  softclippedread.h
age/: AGEaligner.cpp  AGEaligner.hh  Sequence.hh
